# safeposix-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  gen_netdevs  gen_netdevs.c  gen_netdevs.sh  lind.metadata  linddata.162  linddata.2204  linddata.619  mklind
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: lind-selfhost.yml  mordor.yml  rust.yml
benches/: fs_open_close.rs  fs_read_write.rs  fs_read_write_seek.rs  gen_getid.rs  global_criterion_settings.rs  rustposix-criterion.rs
src/: dispatcherframework.c  dispatcherframework.h  lib.rs  lib_fs_utils.rs  main.rs  test.c
src/interface/: comm.rs  errnos.rs  file.rs  misc.rs  mod.rs  pipe.rs  timer.rs  types.rs
src/safeposix/: -e cage.rs  cage.rs  config.py  dispatcher.rs  filesystem.rs  mod.rs  net.rs  shm.rs  syscall_numbers.rs
src/safeposix/syscalls/: errnos.rs  fs_calls.rs  fs_constants.rs  lab.rs  mod.rs  net_calls.rs  net_constants.rs  sys_calls.rs  sys_constants.rs
src/tests/: fs_tests.rs  ipc_tests.rs  mod.rs  networking_tests.rs  pipe_tests.rs  sys_tests.rs  test.rs  ut_lind_fs_broken_close.rs
src/tests/lind_new_tests/: nbuds.c  scud2.c  unixgetsockname.c
src/tools/: fs_utils.rs  lib_fs_utils.rs  safeposix
