[package]
name = "rustposix"
version = "0.1.0"
authors = ["Nicholas Smith Renner <nrenner@nyu.edu>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
ringbuf = "0.2.6"

[[bin]]
name = "lind_fs_utils"
path = "src/tools/fs_utils.rs"
