[package]
name = "rustposix"
version = "0.1.0"
authors = ["Nicholas Smith Renner <nrenner@nyu.edu>", "Jonathan Eli Singer <jes965@nyu.edu>", "Tristan J. Brigham <tristanbrigham22@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
# cdylib is a dynamically linkable library, which is great for linking into
# C programs and similar. rlib is needed for the criterion benchmarking libary
# and creates one of Rust's static libraries.  We are currently not generating
# dylib files which are Rust's internal (non-stable) ABI.  
# Source: https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib","rlib"]
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_cbor = "0.10"
libc = "0.2"
ringbuf = "0.2.6"
dashmap = { version = "5.1", features=["serde"] }
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}
tempfile = "3.2.0"
grcov="0.8.19" # code coverage

[[bin]]
name = "lind_fs_utils"
path = "src/tools/fs_utils.rs"

# many benchmarks follow.  Don't put any non-benchmarks below this...
[[bench]]
name = "gen_getid"
path = "benches/gen_getid.rs"
harness= false

[[bench]]
name = "fs_open_close"
path = "benches/fs_open_close.rs"
harness= false

[[bench]]
name = "fs_read_write"
path = "benches/fs_read_write.rs"
harness= false

[[bench]]
name = "fs_read_write_seek"
path = "benches/fs_read_write_seek.rs"
harness= false


# Don't put any thing below this...  benchmarks above!
